# game

./: .gitignore  CMakeLists.txt  main.cpp
.cache/clangd/index/: Animation.cpp.047E2FBC4B344B90.idx  Animation.h.8C6FC8F995FC3B2F.idx  Collision.cpp.CE7626C54CA9574A.idx  Collision.h.53BCD8BBBC332CB1.idx  Dragon.cpp.6ED805A3D3C4BB26.idx  Dragon.h.7D33AE80E7742DA0.idx  Enemy.cpp.0510E5497D05A47D.idx  Enemy.h.266F839664DA2D56.idx  GameObject.cpp.B7FAE8832044D63B.idx  GameObject.h.E0248D167D523E15.idx  Platform.cpp.4864196538AB8CB7.idx  Platform.h.90371E2ABC90DD7C.idx  Player.cpp.FB427596EC05BBC7.idx  Player.h.F61221790364AC63.idx  main.cpp.41BCBA031EF41EA5.idx
Animation/: Animation.cpp  Animation.h
Enemy/: Dragon.cpp  Dragon.h  Enemy.cpp  Enemy.h
GameObject/: GameObject.cpp  GameObject.h
Physics/: Collision.cpp  Collision.h
Platform/: Platform.cpp  Platform.h
Player/: Player.cpp  Player.h
